Fix dash cut off

--- a/src/Styles/_tags.scss
+++ b/src/Styles/_tags.scss
@@ -186,7 +186,7 @@ $crafts:      #67d5e9;
 
   &-separator {
     position: absolute;
-    top: 0px;
+    top: 1px;
     bottom: 0px;
     right: -3px;
     border-right: 1px dashed $border-color;
